# data_visualization

./: pyproject.toml  viz-a.ipynb  viz-b.ipynb
assets/: male-divorcees-age.csv
