[tool.poetry]
name = "data_visulization"
version = "0.1.0"
description = ""
authors = ["Marleyman876 <grant_garfield@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
seaborn = "^0.11.1"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
